# quickbitlabs

./: .gitignore  FullProjectTree.md  GEMINI.md  Plugin Framework Rules.md  ProjectTree.md  README.md  boot.py  boot_server.py  build_server.py  command book.md  config.yml  docker-compose.yml  launch_quickbitlabs.bat  main.py  master.py  mic_check.py  pyproject.toml  quickbitlabs.code-workspace  requirements.txt  run_server.py  sync.py  test_migration.py
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 8ad3530441c6_initial.py
frontend/: QBL Frontend Rules.md  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  QBL Frontend Rules.md
mypy_util/: __init__.py  config.py
quickbitlabs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: .gitattributes  .gitignore  ApacheArrow.py  Dockerfile  LoadVars.ps1  MetaData.sql  Reader.py  arrow_util.py  arrow_with_meta.py  boot.py  bootstrap.py  bs4_scraper.py  cache_buster_footgun.py  cleanup_oracle_migration.sql  cloudflare_llama_worker.py  convert_format.py  create_user.py  crypto.py  decorators.py  dict_tools.py  distro.bash  docker-compose-dev.yml  env_loader.bash  env_tools.py  exec_python.bash  format_bytes.py  grepstuff.bash  import_modules.bash  install_package.py  list_from_generator.py  list_tools.py  manageuser.bash  master_py.py  mytree.ps1  pandas_demo.py  pandas_utils.py  parallel_map.py  pip_tools.py  polars_regex.py  pretty_printing.py  (+17 more)
scripts/bash/: curl_logger.bash  exec_java.bash  exec_sql.bash  logger.bash  modulizer.bash  nat_forward.bash  perlgex.bash  pretty_response.bash  simple_port_forwarder.bash
scripts/configs/: application.properties  openapi.yaml
scripts/daemon/: port_daemon.bash  setup
scripts/git/: git_webhooks.bash  import_modules.bash
scripts/gitscripts/: branch_stuff.bash  init_helper.bash  my_git_utils.bash
scripts/java/: FormatConverter.java  MyFileUtil.java  README.md  ServletUtil.java  Simple.java
scripts/js/: DebugModule.js  base64UrlDecodeToBytes.js  base64UrlEncodeBytes.js  corsHeaders.js  createJwtHS256.js  csvToArrOfObj.js  downloadFile.js  fullscreen.js  getFromClipboard.js  getUrlParams.js  index.js  isValidDate.js  memoizer.js  prettyBytes.js  readFileAsDataUrl.js  readFileAsText.js  runInterestCalc.js  setUrlParams.js  useLocalStorage.js  useMediaQuery.js
scripts/lambda/: dynamo.py  dynamodb_test.py  mariadb.py
scripts/listers/: local_users.bash  nss_users.bash
scripts/programs/: simple.bash  strict_file_finder.bash
scripts/pwsh/: start.ps1
scripts/pwsh-junk-drawer/: MyUtilModule.psm1  errorUtil.ps1  promptUtil.ps1  pwshLogUtil.ps1
scripts/pwsh-module/: LoadVars.ps1  excelUtil.ps1
scripts/pyscript/: binary_search.py  domain_name_search.py  format_converter.py  launch_quickbitlabs.bat  markdown_to_html.py  mypy_utils.py  (+1 more)
server/: ProjectTree.md  README.md  RULES.md  TODO.md  app.py  plugin assignment refactor.md  run.py  server.py  start_app.py  start_server.py  test_migration.py  test_migration_oracle.py
templates/: index.html
tests/: conftest.py  test_configpy.py  test_db.py  test_fix.py  test_live.py  test_migration_live.py  test_oracle_dialect_operators.py  test_refresh_token.py  test_startup.py
utils/: parse_args.py  parse_config_file.py  setup_logging.py
(+388 files in other folders)
