[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbitlabs"
version = "0.1.0"
description = "olympus"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "fastapi==0.135.1",
    "greenlet==3.3.2",
    "gunicorn==25.1.0",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "oracledb==3.4.2",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "PyJWT==2.12.0",
    "pytest==9.0.2",
    "python-multipart==0.0.20",
    "requests==2.32.5",
    "ruff==0.15.5",
    "SQLAlchemy==2.0.48",
    "sqlmodel==0.0.37",
    "starlette==0.52.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
]

[project.optional-dependencies]
# installed only on request: pip install quickbitlabs[dev]
dev = [
    "pytest", 
    "ruff"
    ]

[tool.setuptools]
packages = ["quickbitlabs"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
