[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbitlabs"
version = "0.1.0"
description = "olympus"
requires-python = ">=3.11"
dependencies = [
    # web framework
    "fastapi",
    "uvicorn",
    "gunicorn",
    "starlette",
    "python-multipart",
    # data / ORM
    "SQLAlchemy",
    "sqlmodel",
    "alembic",
    "pydantic",
    "pydantic_core",
    # auth / security
    "PyJWT",
    "argon2-cffi",
    "cryptography",
    # database drivers
    "oracledb",
    # http
    "requests",
    "urllib3",
    "certifi",
    "charset-normalizer",
    "idna",
    "h11",
    # async / runtime
    "anyio",
    "greenlet",
    "click",
    "colorama",
    # typing
    "annotated-types",
    "typing_extensions",
    "typing-inspection",
    # misc runtime
    "more-itertools",
    "Mako",
    "MarkupSafe",
    "cffi",
    "pycparser",
    "packaging",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "Pygments",
    "pluggy",
    "iniconfig",
    "annotated-doc",
]

[tool.setuptools]
packages = ["quickbitlabs"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
